--- a/Assets/Scripts/UI/MenuPanel.uxml
+++ b/Assets/Scripts/UI/MenuPanel.uxml
@@ -1,9 +1,11 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/Scripts/UI/USS/GamePlayUSS.uss?fileID=7433441132597879392&amp;guid=c5a2d81604854ca0961b9d14b08f49e1&amp;type=3#GamePlayUSS" />
     <engine:VisualElement name="BackGround" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Art/Background/Title%20Background.jpg?fileID=2800000&amp;guid=abf6df836e0bd4fa2a1f2e7b0a29eadb&amp;type=3#Title Background&quot;); font-size: 25px; color: rgb(255, 255, 255);" />
     <engine:VisualElement name="VisualElement" style="flex-grow: 1; position: absolute; height: 722px; width: 547px; top: 87px; left: 119px;">
         <engine:VisualElement name="logo" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/Art/UI%20Elements/GameLogo.png?fileID=2800000&amp;guid=aac4a914e6636479c89abb06d5df58e6&amp;type=3#GameLogo&quot;); -unity-background-scale-mode: scale-to-fit; height: 326px; width: 587px;" />
         <engine:VisualElement name="Buttons" style="flex-grow: 1;">
-            <engine:Button text="新的旅程" style="background-image: url(&quot;project://database/Assets/Art/UI%20Elements/Button.png?fileID=2800000&amp;guid=1547f1fe317e34067b4317cb769df353&amp;type=3#Button&quot;); -unity-background-scale-mode: scale-to-fit; background-color: rgba(69, 84, 87, 0); margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; height: 120px; width: 592px; font-size: 25px; -unity-text-outline-color: rgba(55, 55, 55, 0); color: rgb(255, 255, 255);" />
+            <engine:Button text="Button" name="QuitButton" class="trunbutton" />
+            <engine:Button text="新的旅程" name="NewGameButton" style="background-image: url(&quot;project://database/Assets/Art/UI%20Elements/Button.png?fileID=2800000&amp;guid=1547f1fe317e34067b4317cb769df353&amp;type=3#Button&quot;); -unity-background-scale-mode: scale-to-fit; background-color: rgba(69, 84, 87, 0); margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; height: 120px; width: 592px; font-size: 25px; -unity-text-outline-color: rgba(55, 55, 55, 0); color: rgb(255, 255, 255);" />
         </engine:VisualElement>
     </engine:VisualElement>
 </engine:UXML>
